# Self-RAG-on-Indian-Constitution

./: .gitignore  README.md  pyproject.toml
notebooks/: data_collector.ipynb  srag.ipynb
notebooks/.ipynb_checkpoints/: data-checkpoint.html  srag-checkpoint.ipynb
src/: cli.py  create_vector_store.py  main.py
src/workflow/: __init__.py  config.py  edges.py  nodes.py  prompts.py  schemas.py  state.py
src/workflows/: main.py
